# afterlimit

./: .gitignore  README.de.md  README.en.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.pt.md  README.ru.md  README.zh.md  install.ps1  install.sh  notify.example.json  pyproject.toml  uninstall.sh
.github/workflows/: ci.yml
afterlimit/: cli.py  limits.py  notify.py  resume.py  sessions.py
afterlimit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
commands/: continuar.md  continue.md  continuer.md  prosseguir.md  weiter.md  продолжить.md  続行.md  继续.md  지속.md
launchd/: com.claude-terminal-auto.resume-safety.plist  com.claude-terminal-auto.tmux-resume.plist
packaging/launchd/: io.afterlimit.run.plist
packaging/systemd/: afterlimit.service  afterlimit.timer
scripts/: notify.py  resume_blocked_sessions.py  tmux_resume_watcher.py
tests/: test_cli.py  test_config.py  test_limits.py  test_notify.py  test_resume.py  test_sessions.py  test_watcher.py
