[project]
name = "afterlimit"
version = "0.1.0"
description = "AI 코딩 에이전트가 사용량 한도로 멈춰도, 한도가 풀리면 스스로 작업을 이어가게 한다"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = []

[project.urls]
Homepage = "https://github.com/dawith-ai/afterlimit"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["afterlimit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
